adding SunHttpLoom and java 19 as a base jdk